<resources>
    <string name="app_name">androidMedia</string>
    <string name="username">Felhasználónév</string>
    <string name="password">Jelszó</string>
    <string name="login">Bejelentkezés</string>
    <string name="register">Regisztráció</string>
    <string name="email">Email cím</string>
    <string name="password_again">Jelszó megerősítése</string>
    <string name="cancel">Mégse</string>
    <string name="phone_number">Telefonszám</string>
    <string name="address">Lakcím</string>
    <string name="description">Leírás</string>
    <string name="login_as_guest">Bejelentekezés vendégként</string>
    <string name="placeholder">Leírás</string>
    <string name="settings">Beállítások</string>
    <string name="logout">Kijelentkezés</string>
    <string name="update">Módosítás</string>
    <string name="delete">Törlés</string>
    <string name="Email">Email</string>
    <string name="takePicture">Kép készítése</string>
    <string name="back">Vissza</string>
    <string name="basedOn">Mi alapján készült?</string>
    <string name="status">Állapot</string>
    <string name="type">Típus</string>
    <string name="modality">Forrás</string>
    <string name="view">Kép nézete(elsső, hátsó)</string>
    <string name="subject">Miről/Kiről készült?</string>
    <string name="encounter">Hogyan készült?</string>
    <string name="createdDateTime">Mikor készült?</string>
    <string name="createdPeriod">Meddig készült?</string>
    <string name="issued">Mikor vált elérhetővé?</string>
    <string name="operator">Készítő</string>
    <string name="reasonCode">Milyen célból készült?</string>
    <string name="bodysite">Megfigyelt elem</string>
    <string name="deviceName">Eszköz neve</string>
    <string name="device">Eszköz típusa</string>
    <string name="height">Kép magassága</string>
    <string name="width">Kép szélessége</string>
    <string name="frames">Kép mérete</string>
    <string name="duration">Időtartam</string>
    <string name="note">Megjegyzés</string>
    <string name="save">Mentés</string>
    <string name="upload">Feltöltés</string>
    <string name="identifier">Azonosító</string>
    <string name="rotate">Forgatás</string>
    <string-array name="content_identifier">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
    </string-array>
    <string-array name="content_basedOn">
        <item>Nem az elvárás alapján</item>
        <item>Elvárás alapján</item>
        <item>Nem az elvárás alapján</item>
        <item>Nem az elvárás alapján</item>
        <item>Elvárás alapján</item>
        <item>Elvárás alapján</item>
        <item>Nem az elvárás alapján</item>
        <item>Elvárás alapján</item>
        <item>Nem az elvárás alapján</item>
        <item>Elvárás alapján</item>
    </string-array>
    <string-array name="content_status">
        <item>Státusz: Elkészült</item>
        <item>Státusz: Elkészült</item>
        <item>Státusz: Elkészült</item>
        <item>Státusz: Elkészült</item>
        <item>Státusz: Elkészült</item>
        <item>Státusz: Elkészült</item>
        <item>Státusz: Elkészült</item>
        <item>Státusz: Elkészült</item>
        <item>Státusz: Elkészült</item>
        <item>Státusz: Elkészült</item>
    </string-array>
    <string-array name="content_type">
        <item>Típus: Kép</item>
        <item>Típus: Kép</item>
        <item>Típus: Kép</item>
        <item>Típus: Kép</item>
        <item>Típus: Kép</item>
        <item>Típus: Kép</item>
        <item>Típus: Kép</item>
        <item>Típus: Kép</item>
        <item>Típus: Kép</item>
        <item>Típus: Kép</item>
    </string-array>
    <string-array name="content_modality">
        <item>Forrás: Internet</item>
        <item>Forrás: Internet</item>
        <item>Forrás: Internet</item>
        <item>Forrás: Internet</item>
        <item>Forrás: Internet</item>
        <item>Forrás: Internet</item>
        <item>Forrás: Internet</item>
        <item>Forrás: Internet</item>
        <item>Forrás: Internet</item>
        <item>Forrás: Internet</item>
    </string-array>
    <string-array name="content_view">
        <item>Nézet: szemből</item>
        <item>Nézet: szemből</item>
        <item>Nézet: szemből</item>
        <item>Nézet: szemből</item>
        <item>Nézet: szemből</item>
        <item>Nézet: szemből</item>
        <item>Nézet: szemből</item>
        <item>Nézet: szemből</item>
        <item>Nézet: szemből</item>
        <item>Nézet: szemből</item>
        <item>Nézet: szemből</item>
    </string-array>
    <string-array name="content_subject">
        <item>Tárgy: barátkozás</item>
        <item>Tárgy: mosoly</item>
        <item>Tárgy: Round One: FIGHT</item>
        <item>Tárgy: Virágzás</item>
        <item>Tárgy: Látogatás</item>
        <item>Tárgy: Its FINE</item>
        <item>Tárgy: Samuel</item>
        <item>Tárgy: Hegyes táj</item>
        <item>Tárgy: Végjáték</item>
        <item>Tárgy: POOG</item>
    </string-array>
    <string-array name="content_encounter">
        <item>Hogyan készült: szafarin</item>
        <item>Hogyan készült: szörfözéskor</item>
        <item>Hogyan készült: Csata közben</item>
        <item>Hogyan készült: Séta közben</item>
        <item>Hogyan készült: Miközben felemelt egy nagy vámpírhölgy</item>
        <item>Hogyan készült: Miközben éppen FINE volt</item>
        <item>Hogyan készült: Éppen néztek</item>
        <item>Hogyan készült: Futás közben</item>
        <item>Hogyan készült: Mozizáskor</item>
        <item>Hogyan készült: Stream közben</item>
    </string-array>
    <string-array name="content_createdDateTime">
        <item>Készült: 2021.04.01.</item>
        <item>Készült: 2021.04.02.</item>
        <item>Készült: 2021.04.03.</item>
        <item>Készült: 2021.04.06.</item>
        <item>Készült: 2021.04.15.</item>
        <item>Készült: 2021.04.16.</item>
        <item>Készült: 2021.04.18.</item>
        <item>Készült: 2021.04.20.</item>
        <item>Készült: 2021.05.01.</item>
        <item>Készült: 2021.05.25.</item>
    </string-array>
    <string-array name="content_createdPeriod">
        <item>Elkészülési időtartam: 69 másodperc</item>
        <item>Elkészülési időtartam: 32 másodperc</item>
        <item>Elkészülési időtartam: 21 másodperc</item>
        <item>Elkészülési időtartam: 17 másodperc</item>
        <item>Elkészülési időtartam: 13 másodperc</item>
        <item>Elkészülési időtartam: 11 másodperc</item>
        <item>Elkészülési időtartam: 8 másodperc</item>
        <item>Elkészülési időtartam: 6 másodperc</item>
        <item>Elkészülési időtartam: 3 másodperc</item>
        <item>Elkészülési időtartam: 1 másodperc</item>
    </string-array>
    <string-array name="content_issued">
        <item>Feltöltve: 2021.05.29</item>
        <item>Feltöltve: 2021.05.29</item>
        <item>Feltöltve: 2021.05.29</item>
        <item>Feltöltve: 2021.05.29</item>
        <item>Feltöltve: 2021.05.29</item>
        <item>Feltöltve: 2021.05.29</item>
        <item>Feltöltve: 2021.05.29</item>
        <item>Feltöltve: 2021.05.29</item>
        <item>Feltöltve: 2021.05.29</item>
        <item>Feltöltve: 2021.05.29</item>
    </string-array>
    <string-array name="content_operator">
        <item>Feltöltő: Jómagam</item>
        <item>Feltöltő: Jómagam</item>
        <item>Feltöltő: Jómagam</item>
        <item>Feltöltő: Jómagam</item>
        <item>Feltöltő: Jómagam</item>
        <item>Feltöltő: Jómagam</item>
        <item>Feltöltő: Jómagam</item>
        <item>Feltöltő: Jómagam</item>
        <item>Feltöltő: Jómagam</item>
        <item>Feltöltő: Jómagam</item>
    </string-array>
    <string-array name="content_reasonCode">
        <item>Cél: szórakoztatás</item>
        <item>Cél: szórakoztatás</item>
        <item>Cél: szórakoztatás</item>
        <item>Cél: szórakoztatás</item>
        <item>Cél: szórakoztatás</item>
        <item>Cél: szórakoztatás</item>
        <item>Cél: szórakoztatás</item>
        <item>Cél: szórakoztatás</item>
        <item>Cél: szórakoztatás</item>
        <item>Cél: szórakoztatás</item>
    </string-array>
    <string-array name="content_bodySite">
        <item>Megfigyelt elem: kedves oroszlán</item>
        <item>Megfigyelt elem: mosolygós cápa</item>
        <item>Megfigyelt elem: Godzilla vs Kong</item>
        <item>Megfigyelt elem: Cseresznyefa</item>
        <item>Megfigyelt elem: Lady Dimitrescu</item>
        <item>Megfigyelt elem: Its FINE</item>
        <item>Megfigyelt elem: Samuel L. Jackson</item>
        <item>Megfigyelt elem: hegyek</item>
        <item>Megfigyelt elem: Marvel karakterek</item>
        <item>Megfigyelt elem: Pog</item>
    </string-array>
    <string-array name="content_deviceName">
        <item>Eszköz neve: Csongorfón</item>
        <item>Eszköz neve: Csongorfón</item>
        <item>Eszköz neve: Csongorfón</item>
        <item>Eszköz neve: Csongorfón</item>
        <item>Eszköz neve: Csongorfón</item>
        <item>Eszköz neve: Csongorfón</item>
        <item>Eszköz neve: Csongorfón</item>
        <item>Eszköz neve: Csongorfón</item>
        <item>Eszköz neve: Csongorfón</item>
        <item>Eszköz neve: Csongorfón</item>
    </string-array>
    <string-array name="content_device">
        <item>Eszköz: Samsung Galaxy A51</item>
        <item>Eszköz: Samsung Galaxy A51</item>
        <item>Eszköz: Samsung Galaxy A51</item>
        <item>Eszköz: Samsung Galaxy A51</item>
        <item>Eszköz: Samsung Galaxy A51</item>
        <item>Eszköz: Samsung Galaxy A51</item>
        <item>Eszköz: Samsung Galaxy A51</item>
        <item>Eszköz: Samsung Galaxy A51</item>
        <item>Eszköz: Samsung Galaxy A51</item>
        <item>Eszköz: Samsung Galaxy A51</item>
    </string-array>
    <string-array name="content_height">
        <item>Magasság: 586px</item>
        <item>Magasság: 433px</item>
        <item>Magasság: 349px</item>
        <item>Magasság: 534px</item>
        <item>Magasság: 313px</item>
        <item>Magasság: 618px</item>
        <item>Magasság: 855px</item>
        <item>Magasság: 484px</item>
        <item>Magasság: 440px</item>
        <item>Magasság: 400px</item>
    </string-array>
    <string-array name="content_width">
        <item>Szélesség: 457px</item>
        <item>Szélesség: 644px</item>
        <item>Szélesség: 620px</item>
        <item>Szélesség: 800px</item>
        <item>Szélesség: 560px</item>
        <item>Szélesség: 1222px</item>
        <item>Szélesség: 800px</item>
        <item>Szélesség: 645px</item>
        <item>Szélesség: 780px</item>
        <item>Szélesség: 600px</item>
    </string-array>
    <string-array name="content_frames">
        <item>Méret: 58KB</item>
        <item>Méret: 77.7KB</item>
        <item>Méret: 45.7KB</item>
        <item>Méret: 127KB</item>
        <item>Méret: 22.5KB</item>
        <item>Méret: 693KB</item>
        <item>Méret: 7.25KB</item>
        <item>Méret: 77.7KB</item>
        <item>Méret: 43.9KB</item>
        <item>Méret: 301KB</item>
    </string-array>
    <string-array name="content_duration">
        <item>Időtartam: Örökkévalóság</item>
        <item>Időtartam: Örökkévalóság</item>
        <item>Időtartam: Örökkévalóság</item>
        <item>Időtartam: Örökkévalóság</item>
        <item>Időtartam: Örökkévalóság</item>
        <item>Időtartam: Örökkévalóság</item>
        <item>Időtartam: Örökkévalóság</item>
        <item>Időtartam: Örökkévalóság</item>
        <item>Időtartam: Örökkévalóság</item>
        <item>Időtartam: Örökkévalóság</item>
    </string-array>
</resources>